# clion_project_template

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  readme.txt
.circleci/: config.yml
ci/travis/: install-linux.sh
gtest/: swap.cpp
inc/: hello.h
inc/swap/: swap.hpp
include/: handler.hpp  swap.hpp
src/: hello.cpp  main.cpp
test/: CMakeLists.txt  test_swap.cpp
